--- a/src/Style/partials/variables.scss
+++ b/src/Style/partials/variables.scss
@@ -1,2 +1,5 @@
 $header-color: #27aabe;
-$color-white: #ffff
+$color-white: #ffff;
+$color-black: #1a1b1b;
+$home-slider: #62676c;
+$button-color: #27aabe;
