start latest news

--- a/src/Style/partials/variables.scss
+++ b/src/Style/partials/variables.scss
@@ -4,3 +4,5 @@ $color-black: #1a1b1b;
 $home-slider: #62676c;
 $button-color: #27aabe;
 $background-grey: #f2f2f2;
+$color-text: #525252;
+$color-orange: #fc8c5e;
